fix: fix --module-path delimiter